# knowledge-store

./: .gitignore  .mcp.json  PRD.md  README.md  pyproject.toml  vulture_whitelist.py
.claude/: CLAUDE.md  agent-scripts  references  skills
.claude/commands/: 0_agent_priming.md  1_tdd_init.md  2_atomic_init.md  3_development_workflow.md  agent_ci_creator.md  agent_ci_fix.md  agent_next_task.md  agent_quality_fix.md  agent_validate.md  hexagonal_init.md  hexagonal_status.md  mcp_server_create.md  meta_session.md  python_quality_review.md  quality_commit.md  sandboxed_patch_workflow.md  tdd_status.md  workflow_status.md
.github/workflows/: ci.yml
src/knowledge_store/: __init__.py  __main__.py  config.py  models.py  server.py  store.py
src/knowledge_store/transport/: __init__.py  http.py
tests/: __init__.py  conftest.py  test_server.py  test_store.py
