[project]
name = "knowledge-store"
version = "0.1.0"
description = "ChromaDB-based MCP server providing semantic search over development patterns"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Memento", email = "memento@example.com" }]
keywords = ["mcp", "chromadb", "semantic-search", "knowledge-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "uvicorn>=0.23",
    "starlette>=0.27",
    "structlog>=23.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "mypy>=1.5",
    "ruff>=0.1",
    "pre-commit>=3.4",
    "vulture>=2.10",
    "bandit>=1.7",
]

[project.scripts]
knowledge-store = "knowledge_store.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_store"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = "3.12.*"
pip = "*"

[tool.pixi.pypi-dependencies]
knowledge-store = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pytest = ">=7.4"
pytest-cov = ">=4.1"
pytest-asyncio = ">=0.21"
mypy = ">=1.5"
ruff = ">=0.1"
pre-commit = ">=3.4"
vulture = ">=2.10"
bandit = ">=1.7"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
serve = "python -m knowledge_store"
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=src/knowledge_store --cov-report=term-missing"
lint = "ruff check src/ tests/"
lint-fix = "ruff check src/ tests/ --fix"
format = "ruff format src/ tests/"
format-check = "ruff format src/ tests/ --check"
typecheck = "mypy src/"
quality = { depends-on = ["lint", "format-check", "typecheck"] }
security = "bandit -r src/ -c pyproject.toml"
deadcode = "vulture src/ tests/ vulture_whitelist.py --min-confidence 60"
lean-server = "python -m knowledge_store"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["knowledge_store"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/knowledge_store"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".pixi"]
skips = ["B101"]  # assert used in tests
