[project]
name = "knowledge-store"
version = "0.1.0"
description = "ChromaDB-based MCP server providing semantic search over development patterns"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Memento", email = "memento@example.com" }]
keywords = ["mcp", "chromadb", "semantic-search", "knowledge-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "uvicorn>=0.23",
    "starlette>=0.27",
    "structlog>=23.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "mypy>=1.5",
    "ruff>=0.1",
    "pre-commit>=3.4",
    "vulture>=2.10",
    "bandit>=1.7",
]

[project.scripts]
knowledge-store = "knowledge_store.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_store"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude/",
    ".pixi/",
    "logs/",
    "data/",
]

# =============================================================================
# PIXI CONFIGURATION - ci-framework compatible
# =============================================================================

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = "3.12.*"
pip = "*"

[tool.pixi.pypi-dependencies]
knowledge-store = { path = ".", editable = true }

# -----------------------------------------------------------------------------
# Feature: quality (REQUIRED by ci-framework)
# Core quality tools for lint, typecheck, test, security
# -----------------------------------------------------------------------------
[tool.pixi.feature.quality.dependencies]
ruff = ">=0.1"
mypy = ">=1.5"
pytest = ">=7.4"
pytest-cov = ">=4.1"
pytest-asyncio = ">=0.21"
pytest-timeout = ">=2.0"
pytest-mock = ">=3.10"
bandit = ">=1.7"

[tool.pixi.feature.quality.tasks]
lint = "ruff check src/ tests/"
lint-fix = "ruff check src/ tests/ --fix && ruff format src/ tests/"
format = "ruff format src/ tests/"
format-check = "ruff format src/ tests/ --check"
typecheck = "mypy src/"
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=src/knowledge_store --cov-report=term-missing --cov-report=xml"
security = "bandit -r src/ -c pyproject.toml"
quality = { depends-on = ["lint", "typecheck", "test", "security"] }

# -----------------------------------------------------------------------------
# Feature: quality-extended (ci-framework extended checks)
# Extended testing and security scanning
# -----------------------------------------------------------------------------
[tool.pixi.feature.quality-extended.dependencies]
pytest-xdist = ">=3.0"

[tool.pixi.feature.quality-extended.tasks]
test-extended = "pytest tests/ -v --cov=src/knowledge_store --cov-report=term-missing"
quality-extended = { depends-on = ["quality", "test-extended"] }

# -----------------------------------------------------------------------------
# Feature: dev (local development)
# Additional tools for local development workflow
# -----------------------------------------------------------------------------
[tool.pixi.feature.dev.dependencies]
pre-commit = ">=3.4"
vulture = ">=2.10"

[tool.pixi.feature.dev.tasks]
serve = "python -m knowledge_store"
lean-server = "python -m knowledge_store"
deadcode = "vulture src/ tests/ --min-confidence 60"

# -----------------------------------------------------------------------------
# Feature: build (package building)
# Build tools for sdist and wheel creation
# -----------------------------------------------------------------------------
[tool.pixi.feature.build.pypi-dependencies]
hatchling = ">=1.18"
build = ">=1.0"

[tool.pixi.feature.build.tasks]
build = "python -m build"

# -----------------------------------------------------------------------------
# Environments (ci-framework compatible)
# -----------------------------------------------------------------------------
[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["quality", "dev"], solve-group = "default" }
quality = { features = ["quality"], solve-group = "default" }
quality-extended = { features = ["quality", "quality-extended"], solve-group = "default" }
quality-ci = { features = ["quality", "build"], solve-group = "default" }
ci = { features = ["quality"], solve-group = "default" }

# =============================================================================
# TOOL CONFIGURATIONS
# =============================================================================

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["knowledge_store"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/knowledge_store"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".pixi"]
skips = ["B101"]  # assert used in tests
